# dspace-submission-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  conftest.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dev-build.yml  prod-promote.yml  stage-build.yml  stage_ecr_push.yml
docs/architecture-decisions/: 0001-record-architecture-decisions.md  0002-use-python-and-click.md  0003-submission-message-spec.md  0004-metadata-json-spec.md  0005-process-all-documents-in-the-queue-every-run.md  0006-submission-message-spec.md  0007-result-message-spec.md  0008-move-specifications.md  0009-support-callbacks-after-processing-messages.md
docs/specifications/: metadata-json-specification.md  result-message-specification.md  submission-message-specification.md
submitter/: __init__.py  cli.py  config.py  errors.py  message.py  s3.py  sample_data.py  sample_data_output_etd.py  sqs.py  ssm.py  submission.py
submitter/schemas/: submission-message-attributes.json  submission-message-body.json
tests/: conftest.py  test_cli.py  test_config.py  test_message.py  test_s3.py  test_sqs.py  test_ssm.py  test_submission.py
tests/fixtures/: completely-fake-data.json  integration-test-submission-messages.json  test-item-metadata-error.json  test-item-metadata.json
