[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "click",
    "boto3",
    "dspace-python-client",
    "sentry-sdk",
    "smart-open",
]

[tool.black]
line-length = 90

[dependency-groups]
dev = [
    "black",
    "moto[s3, server, sqs]",
    "pytest",
    "coveralls",
    "requests-mock",
    "pytest-cov",
    "pytest-env",
    "freezegun",
    "coverage",
    "ruff",
    "safety",
    "pre-commit",
    "mypy",
    "types-requests",
    "boto3-stubs[essential]",
    "pip-audit",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]
ignore_missing_imports = true

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
dspace-python-client = { git = "https://github.com/mitlibraries/dspace-python-client.git" }

[tool.pytest.ini_options]
log_level = "INFO"
env = [
  "WORKSPACE=test"
]

[tool.ruff]
target-version = "py312"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    # default
    "ANN101",
    "ANN102",
    "COM812",
    "D107",
    "N812",
    "PTH",

    # project-specific
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D200",
    "D212",
    "D415",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S320",
    "S321",
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
