[project]
name = "submitter"
version = "1.2.3"
requires-python = "~=3.12.0"
dependencies = [
    "boto3",
    "click",
    "dspace-python-client",
    "dspace-rest-client>=0.1.16",
    "sentry-sdk",
    "smart-open",
]

[project.scripts]
submitter = "submitter.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["submitter"]

[tool.black]
line-length = 90

[dependency-groups]
dev = [
    "black",
    "boto3-stubs[essential]",
    "coverage",
    "coveralls",
    "freezegun",
    "moto[s3, server, sqs]",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "requests-mock",
    "ruff",
    "safety",
    "types-requests",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]
ignore_missing_imports = true

[tool.uv]
package = true
override-dependencies = ["smart_open>=7.0.0"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
dspace-python-client = { git = "https://github.com/mitlibraries/dspace-python-client.git" }

[tool.pytest.ini_options]
log_level = "INFO"
env = [
  "WORKSPACE=test"
]

[tool.ruff]
target-version = "py312"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    # default
    "COM812",
    "D107",
    "N812",
    "PTH",

    # project-specific
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D200",
    "D212",
    "D415",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S321",
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
